fix: color contrast for dark mode

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -19,8 +19,8 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --accent: hsl(218, 76%, 66%);
-    --accent-dark: hsl(218, 76%, 53%);
+    --accent: hsl(210, 75%, 50%);
+    --accent-dark: hsl(210, 75%, 60%);
     --surface-background: 25, 25, 30;
     --black: 229, 233, 240;
     --gray: 168, 162, 158;
